Crash using force fields and hair dynamics #73304

Closed
opened 2020-01-21 22:16:00 +01:00 by Scott Ramsay · 7 comments

System Information
Operating system: Linux-5.4.13-arch1-1-x86_64-with-arch 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44

Blender Version
Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-20 22:30, hash: 04e318de3a

Short description of error
Using any force objects along with Hair Dynamics enabled causes Blender to crash.

Exact steps for others to reproduce the error
From the default scene, add any force field object (wind, turbulence, drag, etc...)
Select the default cube and add a hair particle system
Enable 'Hair Dynamics'
Press play to crash

Example file - open and press play
hair-crash.blend

**System Information** Operating system: Linux-5.4.13-arch1-1-x86_64-with-arch 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.44 **Blender Version** Broken: version: 2.83 (sub 1), branch: master, commit date: 2020-01-20 22:30, hash: `04e318de3a` **Short description of error** Using any force objects along with Hair Dynamics enabled causes Blender to crash. **Exact steps for others to reproduce the error** From the default scene, add any force field object (wind, turbulence, drag, etc...) Select the default cube and add a hair particle system Enable 'Hair Dynamics' Press play to crash Example file - open and press play [hair-crash.blend](https://archive.blender.org/developer/F8293966/hair-crash.blend)
Author

Added subscriber: @smramsay

Added subscriber: @smramsay
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

There is a heap-buffer-overflow.

==4668==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x6060004400a0 at pc 0x562f34c62fd0 bp 0x7fd8dd5f9340 sp 0x7fd8dd5f9330
READ of size 4 at 0x6060004400a0 thread T66
    - 0 0x562f34c62fcf in cloth_calc_force /home/jacques/blender-git/blender/source/blender/physics/intern/BPH_mass_spring.cpp:639
    - 1 0x562f34c6bf91 in BPH_cloth_solve /home/jacques/blender-git/blender/source/blender/physics/intern/BPH_mass_spring.cpp:1167
    - 2 0x562f2e87564f in do_step_cloth /home/jacques/blender-git/blender/source/blender/blenkernel/intern/cloth.c:405
    - 3 0x562f2e876dff in clothModifier_do /home/jacques/blender-git/blender/source/blender/blenkernel/intern/cloth.c:515
    - 4 0x562f2e3b3eb2 in do_hair_dynamics /home/jacques/blender-git/blender/source/blender/blenkernel/intern/particle_system.c:3503
    - 5 0x562f2e3b547c in hair_step /home/jacques/blender-git/blender/source/blender/blenkernel/intern/particle_system.c:3545
    - 6 0x562f2e3ccf7a in particle_system_update /home/jacques/blender-git/blender/source/blender/blenkernel/intern/particle_system.c:4872
    - 7 0x562f2fe1594f in deformVerts /home/jacques/blender-git/blender/source/blender/modifiers/intern/MOD_particlesystem.c:212
    - 8 0x562f2e1c9da1 in modwrap_deformVerts /home/jacques/blender-git/blender/source/blender/blenkernel/intern/modifier.c:976
    - 9 0x562f2e77b895 in mesh_calc_modifiers /home/jacques/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:983
There is a heap-buffer-overflow. ``` ==4668==ERROR: AddressSanitizer: heap-buffer-overflow on address 0x6060004400a0 at pc 0x562f34c62fd0 bp 0x7fd8dd5f9340 sp 0x7fd8dd5f9330 READ of size 4 at 0x6060004400a0 thread T66 - 0 0x562f34c62fcf in cloth_calc_force /home/jacques/blender-git/blender/source/blender/physics/intern/BPH_mass_spring.cpp:639 - 1 0x562f34c6bf91 in BPH_cloth_solve /home/jacques/blender-git/blender/source/blender/physics/intern/BPH_mass_spring.cpp:1167 - 2 0x562f2e87564f in do_step_cloth /home/jacques/blender-git/blender/source/blender/blenkernel/intern/cloth.c:405 - 3 0x562f2e876dff in clothModifier_do /home/jacques/blender-git/blender/source/blender/blenkernel/intern/cloth.c:515 - 4 0x562f2e3b3eb2 in do_hair_dynamics /home/jacques/blender-git/blender/source/blender/blenkernel/intern/particle_system.c:3503 - 5 0x562f2e3b547c in hair_step /home/jacques/blender-git/blender/source/blender/blenkernel/intern/particle_system.c:3545 - 6 0x562f2e3ccf7a in particle_system_update /home/jacques/blender-git/blender/source/blender/blenkernel/intern/particle_system.c:4872 - 7 0x562f2fe1594f in deformVerts /home/jacques/blender-git/blender/source/blender/modifiers/intern/MOD_particlesystem.c:212 - 8 0x562f2e1c9da1 in modwrap_deformVerts /home/jacques/blender-git/blender/source/blender/blenkernel/intern/modifier.c:976 - 9 0x562f2e77b895 in mesh_calc_modifiers /home/jacques/blender-git/blender/source/blender/blenkernel/intern/DerivedMesh.c:983 ```
Luca Rood was assigned by Jacques Lucke 2020-01-22 11:35:13 +01:00
Member

This seems to be caused by d42a7bbd6e.

This seems to be caused by d42a7bbd6e.

This issue was referenced by 96339c4cef

This issue was referenced by 96339c4cef104a007bafcc38a788a04e6b263ec8
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#73304
No description provided.